--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Sección de Cabecera -->
         <header>
             <div class="profile-picture">
-                <img src="/images/raquel-insfran.jpg" alt="Foto de perfil">
+                <img src="/images/raquel.insfran.jpg" alt="Foto de perfil">
             </div>
             <div class="header-info">
                 <h1>Raquel Insfran</h1>
